@@ -1,6 +1,10 @@
 Changes to Version 2.3-0
 
   o Added .rtf output to options for RMarkdown reports.
+  
+  o Added bootstrap dialog for "lm"s and "glm"s.
+  
+  o Added delta-method dialog.
 
 
 Changes to Version 2.2-4
